[tool.poetry]
name = "psa-connected-car-client"
version = "v0.1.2"
description = ""
authors = ["Andrea Ghensi <andrea.ghensi@gmail.com>"]
readme = "README.md"
packages = [{include = "psa_ccc"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.1"
authlib = "^1.2.0"
msgspec = "^0.18.4"
cryptography = "^41.0.2"
pyaxmlparser = "^0.3.28"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1.0"}
pytest-cov = "^4.0.0"
pytest-httpx = "^0.27.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^9.0.13"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-exclude = "^1.0.2"
mkdocs-section-index = "^0.3.5"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
pre-commit = "2.0"
jake = "^3.0.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"
types-oauthlib = "^3.2.0.6"

[tool.coverage.paths]
source = ["psa_car_connected_client", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["psa_ccc"]
omit = ["*/__main__.py", "*/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "if __name__ == .__main__.:"
]

[tool.commitizen]
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "psa_ccc/__init__.py:__version__"
]
tag_format = "v$version"
bump_message = "build: release $current_version -> $new_version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
#no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
#warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "uplink",
    "requests.*",
    "authlib.*",
    "pytest",
    "pyaxmlparser.*"
]
ignore_missing_imports = true

[tool.ruff]
select = ["B", "C", "D", "E", "F", "I", "N", "S", "U", "W"]
ignore = ["E501", "D212", "D103"]
target-version = "py310"
src = ["src", "test"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D107", "S105"]
"psa_ccc/models.py" = ["N815"]
"psa_ccc/client.py" = ["N803"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true
